--- a/ui/panels/adminpanel.ui
+++ b/ui/panels/adminpanel.ui
@@ -108,7 +108,11 @@
          </widget>
         </item>
         <item row="3" column="0" colspan="3">
-         <widget class="QListView" name="artistView"/>
+         <widget class="QListView" name="artistView">
+          <property name="horizontalScrollBarPolicy">
+           <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+          </property>
+         </widget>
         </item>
         <item row="2" column="0" colspan="3">
          <widget class="QLabel" name="artistDescriptionLabel">
@@ -575,8 +579,8 @@
    <slot>goToInfoChangingMode()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>283</x>
-     <y>126</y>
+     <x>677</x>
+     <y>93</y>
     </hint>
     <hint type="destinationlabel">
      <x>479</x>
@@ -591,8 +595,8 @@
    <slot>rejectChanging()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>742</x>
-     <y>51</y>
+     <x>110</x>
+     <y>40</y>
     </hint>
     <hint type="destinationlabel">
      <x>781</x>
@@ -607,8 +611,8 @@
    <slot>acceptChanging()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>390</x>
-     <y>711</y>
+     <x>110</x>
+     <y>40</y>
     </hint>
     <hint type="destinationlabel">
      <x>316</x>
@@ -623,8 +627,8 @@
    <slot>togglePasswordShow(bool)</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>741</x>
-     <y>332</y>
+     <x>110</x>
+     <y>40</y>
     </hint>
     <hint type="destinationlabel">
      <x>779</x>
@@ -639,8 +643,8 @@
    <slot>addArtist()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>46</x>
-     <y>700</y>
+     <x>295</x>
+     <y>672</y>
     </hint>
     <hint type="destinationlabel">
      <x>35</x>
@@ -655,8 +659,8 @@
    <slot>removeArtist()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>125</x>
-     <y>704</y>
+     <x>440</x>
+     <y>672</y>
     </hint>
     <hint type="destinationlabel">
      <x>104</x>
@@ -668,7 +672,7 @@
    <sender>artistView</sender>
    <signal>activated(QModelIndex)</signal>
    <receiver>AdminPanel</receiver>
-   <slot>editArtist(QModelIndex)</slot>
+   <slot>viewArtist(QModelIndex)</slot>
    <hints>
     <hint type="sourcelabel">
      <x>363</x>
@@ -684,11 +688,11 @@
    <sender>editButton</sender>
    <signal>clicked()</signal>
    <receiver>AdminPanel</receiver>
-   <slot>viewArtist()</slot>
+   <slot>editArtist()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>733</x>
-     <y>691</y>
+     <x>380</x>
+     <y>676</y>
     </hint>
     <hint type="destinationlabel">
      <x>789</x>
@@ -704,7 +708,7 @@
   <slot>togglePasswordShow(bool)</slot>
   <slot>addArtist()</slot>
   <slot>removeArtist()</slot>
-  <slot>editArtist(QModelIndex)</slot>
-  <slot>viewArtist()</slot>
+  <slot>viewArtist(QModelIndex)</slot>
+  <slot>editArtist()</slot>
  </slots>
 </ui>
